src/test/valid/extensionTests/classes/classNewObject.wacc
begin
  int f() is
    return 1
  end

  class Car() is
    int speed;

    Car(int s) is
      speed = s
    end

    int getSpeed() is
      return speed
    end
  end

  int x = call f();
  println x;

  Car car = new Car(x);
end